# Tensile

Tensile/: ClientExecutable.py  ClientWriter.py  Common.py  KernelWriter.py  KernelWriterAssembly.py  SolutionStructs.py  Tensile.py  TensileCreateLibrary.py
Tensile/Components/: ComputeStoreVgprs.py  LocalRead.py  LraTileAssignment.py
Tensile/Source/: CMakeLists.txt
Tensile/Source/client/: CMakeLists.txt  main.cpp
Tensile/Source/client/include/: DataInitialization.hpp  HardwareMonitor.hpp  HardwareMonitorType.hpp  HardwareMonitorWindows.hpp  LogReporter.hpp  ReferenceValidator.hpp  program_options.hpp
Tensile/Source/client/source/: ConvolutionProblem.cpp  DataInitialization.cpp  HardwareMonitor.cpp  HardwareMonitorListener.cpp  ProgressListener.cpp  ResultFileReporter.cpp
Tensile/Source/lib/: CMakeLists.txt
Tensile/Source/lib/include/Tensile/: DataTypes_Half.hpp  DistinctType.hpp  PerformanceMetricTypes.hpp  PropertyMatching.hpp  SolutionLibrary.hpp
Tensile/Source/lib/source/: ContractionSolution.cpp
Tensile/Tests/integration/: test_integration.py
Tensile/Tests/pre_checkin/denorm/mfma/: hgemm_denorm.yaml
Tensile/Tests/pre_checkin/mfma/: 1LDSB.yaml  hpa_hgemm_asm.yaml  hpa_hgemm_general_batch_asm.yaml  hpa_hgemm_split_lds.yaml  wider_local_read.yaml
Tensile/Tests/unit/: test_Common.py
Tensile/Tests/yaml_only/: test_config.py
